@startuml
hide circle
skinparam classAttributeIconSize 0

class APIGateway {
}

class BillController {
    - _billRepository: IBillRepositories
    + GetAllBills(): Task<IActionResult>
}

interface IBillRepositories<<interface>> {
    + GetAllBills(): Task<List<BillResponseDTO>>
}

class BillRepositories {
    - _billDao: BillDAO
    + GetAllBills(): Task<List<BillResponseDTO>>
}

class BillDAO {
    - _client.From<Bill> : ISupabaseTable<Bill>
    - _client.From<BillDetail> : ISupabaseTable<BillDetail>
    + GetAllBills(): Task<List<BillResponseDTO>>
}

class Bill {
    + Id: Guid
    + ReservationId: Guid
    + TotalAmount: decimal
    + ReceivedAmount: decimal
    + ChangeAmount: decimal
    + TableId: Guid
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + CustomerId: Guid
    + ShopId: Guid
}

class BillDetail {
    + Id: Guid
    + BillId: Guid
    + MenuItemId: Guid
    + Quantity: int
    + Price: decimal
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

APIGateway -- BillController

BillController -- IBillRepositories

IBillRepositories <|.. BillRepositories

BillRepositories "1" -- "1..*" BillDAO

BillDAO "1" -- "0..*" Bill

BillDAO "1" -- "0..*" BillDetail
@enduml